--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </section>
 
     <section id="about" class="about">
-        <h2>About Us</h2>
-        <p>Discover the story behind CozyCup Café...</p>
+        <h2>RIcs is a peaceful haven where every cup and slice is crafted with care to bring people together in a relaxing, welcoming space.</h2>
+        <p>Rics began from a love for homemade baking and barista-grade coffee, aiming to be the kind of cozy spot where every cup and slice feels made with heart.</p>
     </section>
 
     <section id="contact" class="contact">
-        <h2>Contact Us</h2>
+        <h2>09272665221</h2>
         <p>Have questions or feedback? Reach out to us...</p>
     </section>
 
