--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <section id="menu" class="menu">
         <h2>Our Menu</h2>
         <!-- Add menu items here -->
+         <li>Dark Chocolate</li>
+        <li>Caramel</li>
+        <li> Macchiato</li>
+        <li>buns</li>
+        <li>Tea</li>
+        <li>Milk Tea</li>
     </section>
 
     <section id="about" class="about">
